<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivityFragment">

    <TextView
        android:id="@+id/tvExample"
        android:textSize="18sp"
        android:text="@string/example_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etBaseUrl"
        android:layout_below="@+id/tvExample"
        android:inputType="textUri"
        android:hint="@string/base_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etCallStartEndpoint"
        android:layout_below="@+id/etBaseUrl"
        android:inputType="textUri"
        android:hint="@string/call_start_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etCallEndEndpoint"
        android:hint="@string/call_end_url"
        android:layout_below="@id/etCallStartEndpoint"
        android:inputType="textUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_save_settings"
        android:text="@string/save_settings"
        android:layout_below="@+id/etCallEndEndpoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
